--- a/android/app/src/main/assets/web/reply_edit.html
+++ b/android/app/src/main/assets/web/reply_edit.html
@@ -4,57 +4,199 @@
         <meta charset="UTF-8">
         <meta name="viewport"
               content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0,viewport-fit=cover">
-        <title>Title</title>
-        <script src="quill.js "></script>
+
         <link href="dracula.min.css" rel="stylesheet">
         <script src="highlight.min.js"></script>
-
         <link href="quill.css" rel="stylesheet">
+        <script src="quill.js "></script>
+        <script src="https://unpkg.com/qiniu-js@2.5.5/dist/qiniu.min.js"></script>
         <style>
-            body {
-                padding-top: 35px;
+
+            * {
+                padding: 0;
+                margin: 0;
             }
 
-            .ql-toolbar {
+            body {
+                background-color: #fff;
+            }
+
+            .ql-container.ql-snow {
+                border: none;
+                min-height: 300px;
+                padding-top: 40px;
+                padding-bottom: 30px;
+            }
+
+
+            .ql-toolbar.ql-snow {
+                width: 100%;
+                border: none;
+                border-top: 1px solid #ebebeb;
+                border-bottom: 1px solid #ebebeb;
                 position: fixed;
                 top: 0;
                 left: 0;
+                z-index: 6666;
+                background-color: #fff;
             }
 
-            .ql-container {
-                position: initial;
+            .ql-snow .ql-picker.ql-header .ql-picker-label::before,
+            .ql-snow .ql-picker.ql-header .ql-picker-item::before {
+                content: '默认';
             }
 
-            .ql-picker-options {
-                background-color: #fff !important;
+            .ql-snow .ql-picker.ql-header .ql-picker-label[data-value="1"]::before,
+            .ql-snow .ql-picker.ql-header .ql-picker-item[data-value="1"]::before {
+                content: 'H1';
             }
 
+            .ql-snow .ql-picker.ql-header .ql-picker-label[data-value="2"]::before,
+            .ql-snow .ql-picker.ql-header .ql-picker-item[data-value="2"]::before {
+                content: 'H2';
+            }
+
+            .ql-snow .ql-picker.ql-header .ql-picker-label[data-value="3"]::before,
+            .ql-snow .ql-picker.ql-header .ql-picker-item[data-value="3"]::before {
+                content: 'H3';
+            }
+
+            .ql-snow .ql-picker.ql-header .ql-picker-label[data-value="4"]::before,
+            .ql-snow .ql-picker.ql-header .ql-picker-item[data-value="4"]::before {
+                content: 'H4';
+            }
+
+            .ql-snow .ql-picker.ql-header .ql-picker-label[data-value="5"]::before,
+            .ql-snow .ql-picker.ql-header .ql-picker-item[data-value="5"]::before {
+                content: 'H5';
+            }
+
+            .ql-snow .ql-picker.ql-header .ql-picker-label[data-value="6"]::before,
+            .ql-snow .ql-picker.ql-header .ql-picker-item[data-value="6"]::before {
+                content: 'H6';
+            }
+
+            .ql-editor.ql-blank::before {
+                font-style: normal;
+            }
+
+            #number {
+                position: fixed;
+                bottom: 10px;
+                right: 10px;
+                font-size: 16px;
+                color: #999;
+                width: 30px;
+                height: 30px;
+                background-color: #fff;
+                text-align: center;
+                line-height: 30px;
+            }
         </style>
     </head>
     <body>
         <!-- Create the editor container -->
-        <div id="editor">
-
-        </div>
+        <div id="editor"></div>
+        <div id="number">0</div>
 
         <script>
-            const quill = new Quill('#editor',{
+
+
+            let upLoadImg = ({ state,file }) => {
+                return new Promise((resolve,reject) => {
+                    let token = window.token
+                    let key = `question/${window._id}/${Date.now()}`
+                    let config = {
+                        useCdnDomain:true,
+                        region:qiniu.region.z0
+                    }
+                    let putExtra = {
+                        fname:file.name,
+                        params:{},
+                        mimeType:['image/png','image/jpeg','image/jpg']
+                    }
+                    let observe = {
+                        next () {
+                        },
+                        error () {
+                            reject()
+                        },
+                        complete (res) {
+                            resolve(res)
+                        }
+                    }
+                    let observable = qiniu.upload(file,key,token,putExtra,config)
+                    observable.subscribe(observe)
+                })
+            }
+
+
+            let quill = new Quill('#editor',{
                 theme:'snow',
                 modules:{
-                    toolbar:[
-                        { 'header':[1,2,3,4,5,6,false] },
-                        'bold',
-                        'italic',
-                        'underline',
-                        'strike',
-                        'blockquote',
-                        'code-block',
-                        { 'list':'bullet' },
-                        'image'
-                    ]
+                    toolbar:{
+                        container:[
+                            { 'header':[1,2,3,4,5,6,false] },
+                            'bold',
+                            'italic',
+                            'underline',
+                            'strike',
+                            'blockquote',
+                            'code-block',
+                            { 'list':'bullet' },
+                            'image'
+                        ],
+                        handlers:{
+                            'image':function (value) {
+                                let fileInput = this.container.querySelector('input.ql-image[type=file]')
+                                if (fileInput == null) {
+                                    fileInput = document.createElement('input')
+                                    fileInput.setAttribute('type','file')
+                                    fileInput.setAttribute('accept','image/*')
+                                    fileInput.classList.add('ql-image')
+                                    fileInput.addEventListener('change',async () => {
+                                        if (fileInput.files != null && fileInput.files[0] != null) {
+                                            let res = await upLoadImg({ file:fileInput.files[0] })
+                                            let range = quill.getSelection()
+                                            if (range) {
+                                                quill.insertEmbed(range.index,'image',`http://cdn.sujie.ink/${res.key}`)
+                                            }
+                                        }
+                                    })
+                                    this.container.appendChild(fileInput)
+                                }
+                                fileInput.click()
+                            }
+                        }
+                    },
+                    syntax:true
 
+                },
+                placeholder:' 写回答...'
+            })
+
+
+            let numberDiv = document.getElementById('number')
+            quill.on('editor-change',() => {
+                numberDiv.innerText = quill.getLength() - 1
+            })
+
+
+            window.document.addEventListener('message',function (event) {
+                let data = JSON.parse(event.data)
+                if (data.type === 'getHtml') {
+                    window.ReactNativeWebView.postMessage(JSON.stringify({
+                        content_html:quill.container.firstChild.innerHTML,
+                        content:quill.getText(),
+                        type:'getHtml',
+                        content_length:quill.getLength() - 1
+                    }))
+                } else if (data.type === 'token') {
+                    window.token = data.token
+                    window._id = data._id
                 }
             })
+
         </script>
     </body>
 </html>
